# ControlVST3

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
resource/: myplugineditor.uidesc  win32resource.aps  win32resource.rc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
